Redact container labels by default
